templates/rules.v4
# Generated by iptables-save v1.4.14 on Tue Jan  8 12:33:13 2013
*filter

:INPUT ACCEPT
:FORWARD ACCEPT
:OUTPUT ACCEPT

# Allow traffic already established to continue

-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

# Allow ssh, ftp, cfengine and web services

-A INPUT -p tcp --dport ssh -i eth0 -j ACCEPT
-A INPUT -p tcp --dport ftp -i eth0 -j ACCEPT
-A INPUT -p udp --dport ftp -i eth0 -j ACCEPT
-A INPUT -p tcp --dport ftp-data -i eth0 -j ACCEPT
-A INPUT -p udp --dport ftp-data -i eth0 -j ACCEPT
-A INPUT -p tcp --dport http -i eth0 -j ACCEPT
-A INPUT -p tcp --dport https -i etho0 -j ACCEPT
-A INPUT -p tcp --dport cfengine -i eth0 -j ACCEPT

# Allow local loopback services

-A INPUT -i lo -j ACCEPT

# Allow pings

-A INPUT -p icmp --icmp-type destination-unreachable -j ACCEPT
-A INPUT -p icmp --icmp-type source-quench -j ACCEPT
-A INPUT -p icmp --icmp-type time-exceeded -j ACCEPT

# Throttle ssh
-A INPUT -i eth0 -m state --state NEW,ESTABLISHED,RELATED -p tcp --dport ssh -m limit --limit 5/minute --limit-burst 5 -j ACCEPT

COMMIT
# Completed on Tue Jan  8 12:33:13 2013
