templates/rules.v6
# Generated by iptables-save v1.4.14 on Tue Jan  8 12:33:13 2013
*filter

:INPUT DROP
:FORWARD ACCEPT
:OUTPUT ACCEPT

# drop invalid traffic

-A INPUT -m state --state INVALID -j DROP


# Allow traffic already established to continue

-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT


# Allow ssh, cfengine and web services

-A INPUT -p tcp --dport ssh -i eth0 -j ACCEPT
-A INPUT -p tcp --dport http -i eth0 -j ACCEPT
-A INPUT -p tcp --dport https -i etho0 -j ACCEPT
-A INPUT -p tcp --dport cfengine -i eth0 -j ACCEPT


# Allow local loopback services

-A INPUT -i lo -j ACCEPT


# Throttle ssh

-A INPUT -i eth0 -m state --state NEW,ESTABLISHED,RELATED -p tcp --dport ssh -m limit --limit 5/minute --limit-burst 5 -j ACCEPT


# Allow pings

-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 128 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 129 -j ACCEPT

COMMIT
# Completed on Tue Jan  8 12:33:13 2013
